Fix del overflow

--- a/contenedores/contenedores.css
+++ b/contenedores/contenedores.css
@@ -90,6 +90,7 @@ input {
     width: 20%;
     height: 10%;
     z-index: 5;
+    overflow: hidden;
 }
 #calculadoras {
     position: absolute;
